# queries-datario

./: .gitignore  README.md  TRIGGER  catalog.json  dbt_project.yml  docker-compose.yaml  duplicates.txt  graph.gpickle  kustomization.yaml  manifest.json  metadata.json  metadata.yaml  partial_parse.msgpack  profiles.yml  requirements-actions.txt  requirements-docs.txt  requirements-metadata.txt  requirements.txt  run_results.json
.github/workflows/: cd.yaml  dbt-compile.yaml  docs.yaml  metadata_automation.yaml
.kubernetes/: deployment.yaml  service.yaml
api/: .gitignore  generate_fixtures.py  index.html  pyproject.toml
api/api/: urls.py
api/api/metadata_api/: apps.py  models.py  serializers.py  views.py
api/api/metadata_api/migrations/: 0001_initial.py  0002_alter_column_description_alter_dataset_description_and_more.py
api/api/settings/: __init__.py  base.py  dev.py  prod.py
models/adm_central_atendimento_1746/: chamado.sql  schema.yml
models/adm_cor_comando/: ocorrencias.sql  ocorrencias_atividades.sql  ocorrencias_nova_api.sql  ocorrencias_orgaos_responsaveis.sql  procedimento_operacional_padrao.sql  procedimento_operacional_padrao_orgaos_responsaveis.sql  schema.yml
models/administracao_recursos_humanos_folha_salarial/: cargo.sql  categoria.sql  empresa.sql  fita_banco.sql  folha_empresa.sql  forma_prov.sql  funcionario.sql  h_setor.sql  horario_trabalho.sql  jornada.sql  matricula.sql  orgaos_externos.sql  orgaos_regime_juridico.sql  provimentos_ev.sql  regime_juridico.sql  schema.yml  tipo_folha.sql  tipo_orgao.sql  vinculo.sql  (+1 more)
pages/: 404.html
(+139 files in other folders)
